Update structure for easier js writing

--- a/src/projects/projects.json
+++ b/src/projects/projects.json
@@ -1,4 +1,7 @@
 {
     "tags": "projects",
-    "layout": "base.njk"
+    "layout": "base.njk",
+    "eleventyComputed": {
+        "jsFile": "js/{{ page.fileSlug }}.js"
+    }
 }
