--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.1",
+    "clean-css": "^5.1.2"
   }
 }
